[package]
name = "rust-spy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.21.0"
memmap2 = "0.7.1"
rstack = { version = "0.3.3", features = ["dw"], default-features = false }
rustc-demangle = "0.1.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"

[[bin]]
name = "rust-spy"
