[package]
name = "rust-spy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["NucliaDB <nucliadb@nuclia.com>"]
description = "Stack dump CLI"
repository = "https://github.com/nuclia/rust-spy"
homepage = "https://nuclia.com/"
documentation = "https://nuclia.com"

[dependencies]
addr2line = "0.21.0"
memmap2 = "0.7.1"
rstack = { version = "0.3.3", features = ["dw"], default-features = false }
rustc-demangle = "0.1.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"

[[bin]]
name = "rust-spy"
